tests/profile/error/version/wrongtype_major.profile
{
  "version": { "major": "abc", "minor": 0.0 }
}
